# morseEncoder-Decoder

./: CMakeLists.txt  README.md  main.cpp  map_reverse  test.cpp
examples/: text_test.txt
include/: fr_to_m.h  m_to_fr.h  read_wav.h  settings.h  wav_header.h  write_wav.h
src/: fr_to_m.cpp  m_to_fr.cpp  read_wav.cpp  wav_header.cpp  write_wav.cpp
